--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,10 @@ section {
   cursor: pointer;
 }
 
+.hidden-option {
+  display: none;
+}
+
 .bar-container {
   display: inline-block;
   margin: 0 10px;
